[tool.poetry]
name = "github-mediator"
version = "0.1.0"
description = "Github bot for enclosing tasks from task managers (ClickUp, Trello, etc.) to PR's and vise verser."
authors = ["gigafiga21 <gigafiga21@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
